[package]
name = "tame-gcs"
version = "0.6.0"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A small library with a limited set of Google Cloud Storage operations"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tame-gcs"
homepage = "https://github.com/EmbarkStudios/tame-gcs"
repository = "https://github.com/EmbarkStudios/tame-gcs"
keywords = ["gcs", "tame", "sans-io", "storage", "gcp"]
readme = "README.md"
exclude = [
  # End users don't want the JSON schemas
  "src/v1/schema.json",
]

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest = false

[dependencies]
base64 = "0.11.0"
bytes = "0.5.3"
chrono = { version = "0.4.10", features = ["serde"] }
http = "0.2.0"
percent-encoding = "2.1.0"
ring = { version = "0.16.9", optional = true }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"
thiserror = "1.0.1"
url = "2.1.0"

[dev-dependencies]
# COLORS! (follows version used by clap)
ansi_term = "0.12.1"
# Friendly error handling
anyhow = "1.0.11"
# Human friendly byte sizes
number_prefix = "0.3.0"
# Diff view of test failures
difference = "2.0.0"
# Because progress bars are fun
indicatif = "0.13.0"
# For doing actual requests in examples
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "18fd9a6", default-features = false, features = [ "rustls-tls", "blocking" ] }
# Because it's good
structopt = "0.3.2"
# For doing actual authentication in examples
tame-oauth = { git = "https://github.com/EmbarkStudios/tame-oauth.git", rev = "6c34d18", features = ["gcp"] }

[features]
default = ["v1"]
# GCS JSON API v1 - Currently the only version of the API
v1 = []
# Enable this feature if you want to create signed URL's without
# needing to implement the signing and digest
signing = ["ring"]
