[package]
name = "tame-gcs"
version = "0.7.0"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A small library with a limited set of Google Cloud Storage operations"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tame-gcs"
homepage = "https://github.com/EmbarkStudios/tame-gcs"
repository = "https://github.com/EmbarkStudios/tame-gcs"
keywords = ["gcs", "tame", "sans-io", "storage", "gcp"]
readme = "README.md"
exclude = [
  # End users don't want the JSON schemas
  "src/v1/schema.json",
]

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest = false

[dependencies]
base64 = "0.11.0"
bytes = "0.5.3"
chrono = { version = "0.4.10", features = ["serde"] }
futures-util = { version = "0.3.0", optional = true, features = ["io"] }
http = "0.2.0"
percent-encoding = "2.1.0"
pin-utils = { version = "0.1.0-alpha.4", optional = true }
ring = { version = "0.16.9", optional = true }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"
thiserror = "1.0.1"
url = "2.1.0"

[dev-dependencies]
# COLORS! (follows version used by clap)
ansi_term = "0.11.0"
# Friendly error handling
anyhow = "1.0.11"
# Human friendly byte sizes
number_prefix = "0.3.0"
# Diff view of test failures
difference = "2.0.0"
# For futures helpers
futures-util = { version = "0.3.0", default-features = false }
# Futures testing utilities
futures-test = { version = "0.3.0" }
# Because it's good
structopt = "0.3.2"
# For doing actual authentication in examples
tame-oauth = { version = "0.4", features = ["gcp"] }

# For doing actual requests in examples
[dev-dependencies.reqwest]
version = "0.10.1"
default-features = false
features = ["rustls-tls", "stream"]

[dev-dependencies.tokio]
version = "0.2.9"
features = ["macros"]

[features]
default = ["v1"]
# GCS JSON API v1 - Currently the only version of the API
v1 = []
# Enable this feature if you want to create signed URL's without
# needing to implement the signing and digest
signing = ["ring"]
# Enable AsyncRead trait for multipart upload.
async-multipart = ["futures-util", "pin-utils"]
