[package]
name = "tame-gcs"
version = "0.10.0"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A small library with a limited set of Google Cloud Storage operations"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tame-gcs"
homepage = "https://github.com/EmbarkStudios/tame-gcs"
repository = "https://github.com/EmbarkStudios/tame-gcs"
keywords = ["gcs", "tame", "sans-io", "storage", "gcp"]
readme = "README.md"
exclude = [
  # End users don't want the JSON schemas
  "src/v1/schema.json",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["v1"]
# GCS JSON API v1 - Currently the only version of the API
v1 = []
# Enable this feature if you want to create signed URL's without
# needing to implement the signing and digest yourself
signing = ["ring"]
# Enable AsyncRead trait for multipart upload.
async-multipart = ["futures-util", "pin-utils"]

[lib]
doctest = false

[dependencies]
base64 = "0.13" # Follows version used by rustls
bytes = "1.0" # Follows version used by http
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true, features = ["io"] }
http = "0.2"
percent-encoding = "2.1"
pin-utils = { version = "0.1.0", optional = true }
ring = { version = "0.16.16", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
# Diff view of test failures
difference = "2.0"
futures = "0.3"
futures-test = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["macros"] }
